// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> renders the component 1`] = `
.c0 {
  width: 45px;
  height: 45px;
  margin: 8px;
  border: 8px solid #00D9C5;
  border-radius: 50%;
  border-top-color: #EFEFEF;
  -webkit-animation: iVXCSc 1.2s linear infinite;
  animation: iVXCSc 1.2s linear infinite;
}

<div
  class="c0"
/>
`;

exports[`<Spinner /> renders the component with props 1`] = `
.c0 {
  width: 38px;
  height: 38px;
  margin: 8px;
  border: 4px solid #00D9C5;
  border-radius: 50%;
  border-top-color: #EFEFEF;
  -webkit-animation: iVXCSc 1.2s linear infinite;
  animation: iVXCSc 1.2s linear infinite;
}

<div
  class="c0"
/>
`;
